1-default-backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: default-http-backend
    namespace: sk-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: default-http-backend
    template:
        metadata:
            labels:
                app: default-http-backend
        spec:
            terminationGracePeriodSeconds: 60
            containers:
            -   name: default-http-backend
                image: k8s.gcr.io/defaultbackend:1.3
                livenessProbe:
                    httpGet:
                        path: /healthz
                        port: 8080
                        scheme: HTTP
                    initialDelaySeconds: 30
                    timeoutSeconds: 5
                resources:
                    limits:
                        cpu: 10m
                        memory: 20Mi
                    requests:
                        cpu: 10m
                        memory: 20Mi
                ports:
                -   name: http
                    containerPort: 8080
                    protocol: TCP
