2-default-backend-service.yaml
kind: Service
apiVersion: v1
metadata:
    name: default-http-backend-svc
    namespace: sk-ns
spec:
    ports:
    -   port: 80
        targetPort: http
    selector:
        app: default-http-backend
