7-Ingress-setup.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: helloworld-ingress
    namespace: sk-ns
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    tls:
    -   hosts:
        -   demo.sk.com
    rules:
    -   host: demo.sk.com
        http:
            paths:
            -   path: /
                backend:
                    serviceName: ingress-demo
                    servicePort: 80
